init swagger
